# koperatiff-portfolio-command-api

./: .env  Cargo.toml  README.md  rocket.toml
migrations/2018-04-03-081437_create_posts/: up.sql
src/: main.rs
src/connection/: mod.rs
src/models/: mod.rs  schema.rs
src/models/request/: post.rs
src/models/response/: post.rs
src/services/: post_service.rs
